--- a/meetup-02/demo/app/views/main.html
+++ b/meetup-02/demo/app/views/main.html
@@ -1,34 +1,28 @@
 <div class="header">
   <ul class="nav nav-pills pull-right">
     <li class="active"><a ng-href="#">Home</a></li>
-    <li><a ng-href="#/user">User</a></li>
     <li><a ng-href="#">Contact</a></li>
   </ul>
   <h3 class="text-muted">meetup</h3>
 </div>
 
 <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
+  <h1>Hola Angulares!</h1>
   <p class="lead">
     <img src="images/yeoman.png" alt="I'm Yeoman"><br>
     Always a pleasure scaffolding your apps.
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!</a></p>
 </div>
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+<div>
+  <table ng-repeat="item in items">
+    <tr>
+      <td>{{item}}</td>
+      <td><button class="btn btn-danger btn-xs" ng-click="removeItem($index)">X</button></td>
+    </tr>
+  </table>
+  <input type="text"  ng-model="item">
+  <button class="btn btn-primary" ng-click="addItem(item)">Add</button>
 </div>
 
 <div class="footer">
